Completed the our service and contact us page

--- a/todo.txt
+++ b/todo.txt
@@ -15,3 +15,10 @@ work on the homepage
 finally, translate all to french
 
 
+SERVICES
+1 Availabilty of fresh farm produce
+2. Logistics/Delivery
+3. Distribution
+4. Conservation
+
+
